<resources>
    <string name="app_name">IS3 Tests Project</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="ek_img_content">ExportKit Image</string>
    <string name="home_string">Home</string>
    <string name="mi_perfil_ek3_string">Mi perfil</string>
    <string name="my_courses_string">My Courses</string>
    <string name="blogs_string">Blogs</string>
    <string name="mi_perfil_ek4_string">Mi perfil</string>
    <string name="medios_de_transporte_usados_string">Medios de transporte usados </string>
    <string name="taxi_string">Taxi</string>
    <string name="combi_string">Combi</string>
    <string name="mototaxi_string">Mototaxi</string>
    <string name="peso_string">70.00</string>
    <string name="altura_string">170.00</string>
    <string name="sexo_string">M</string>
    <string name="edad_string">22 aos (17 noviembre 1970)</string>
    <string name="edadlabel_string">Edad</string>
    <string name="pesolabel_string">Peso</string>
    <string name="alturalabel_string">Altura</string>
    <string name="sexolabel_string">Sexo</string>
    <string name="informacion_basica_string">Informacion Basica</string>
    <string name="cerrarsesion_string">Cerrar Sesion</string>
    <string name="usuarionombre_string">Shober Mendoza</string>
    <string name="correo_string">poroto_coin@gmail.com</string>
    <string name="tienda_ek3_string">Tienda</string>
    <string name="avatar_clasico_string">Avatar clasico</string>
    <string name="puntuacion_string">3</string>
    <string name="home_ek2_string">Home</string>
    <string name="tienda_ek4_string">Tienda</string>
    <string name="my_profile_string">My Profile</string>
    <string name="mi_actividad_string">Mi actividad</string>
    <string name="walpaper_premium_string">Walpaper Premium</string>
    <string name="puntuacion_ek1_string">30</string>
    <string name="descripcion_string">Descripcion</string>
    <string name="mas_string">Mas</string>
    <string name="fondo_para_la_aplicacion_string">Fondo para la aplicacion</string>
    <string name="ratings_and_reviews_string">Ratings and Reviews</string>
    <string name="con_este_fondo_podras_perzonalizar_tu_app_con_un_increible_tema_crado_por_nuestros_propios_programadores_con_mucho_esfuerzo_y_dedicacion_string">Con este fondo podras perzonalizar tu app con un increible tema crado por nuestros propios programadores con mucho esfuerzo y dedicacion</string>
    <string name="puntuacion_ek2_string">30</string>
    <string name="cantidadcompras_string">3 compras</string>
    <string name="home_ek4_string">Home</string>
    <string name="tienda_ek5_string">Tienda</string>
    <string name="my_profile_ek1_string">My Profile</string>
    <string name="mi_actividad_ek1_string">Mi actividad</string>
    <string name="home_ek5_string">Home</string>
    <string name="tienda_ek6_string">Tienda</string>
    <string name="my_profile_ek2_string">My Profile</string>
    <string name="mi_actividad_ek5_string">Mi actividad</string>
    <string name="mi_actividad_ek6_string">Mi Actividad</string>
    <string name="porcentaje40__string">40%</string>
    <string name="este_grafico_demuestra_las_estadisticas_rescatadas_de_tus_caminatas_los_ultimos_7_dias_string">Este grafico demuestra las estadisticas rescatadas de tus caminatas los ultimos 7 dias</string>
    <string name="ubicacion_actual_string">Ubicacion actual</string>
    <string name="tus_estadisticas__string">Tus estadisticas:</string>
    <string name="hola_shober_string">Hola Shober</string>
    <string name="home_ek9_string">Home</string>
    <string name="mi_actividad_ek7_string">Mi actividad</string>
    <string name="tienda_ek7_string">Tienda</string>
    <string name="my_profile_ek3_string">My Profile</string>
    <string name="general_string">General</string>
    <string name="porcentaje_ek1_string">40%</string>
    <string name="esre_es_tu_recorrido_durante_las_ultimas_horas_string">Esre es tu recorrido durante las ultimas horas</string>
    <string name="recorrido_string">4 km recorridos</string>
    <string name="registrarse_string">Registrarse</string>
    <string name="registrar_string">Registrar</string>
    <string name="nombres_y_apellidos_string">Nombres y Apellidos</string>
    <string name="nombres_y_apellidos_ek1_string">Nombres y Apellidos</string>
    <string name="edad_ek1_string">Edad</string>
    <string name="sexo_ek1_string">Sexo</string>
    <string name="correo_ek1_string">Correo</string>
    <string name="contrase_a_string">Contrasea</string>
    <string name="registre_sus_datos_string">REGISTRE SUS DATOS</string>
    <string name="login_ek3_string">LOGIN</string>
    <string name="ingresar_string">Ingresar</string>
    <string name="registrarse_ek1_string">Registrarse</string>
    <string name="correo_ek2_string">Correo</string>
    <string name="contrase_a_ek1_string">Contrasea</string>


    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_store">Store</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_place">SelectPlace</string>



    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
</resources>