<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".store_item">

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="718dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walpaper_premium_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="157dp"
                android:layout_height="48dp"
                android:text="@string/descripcion_string"
                app:iconGravity="top|start" />

            <Button
                android:id="@+id/button"
                android:layout_width="157dp"
                android:layout_height="48dp"
                android:text="Mas"
                app:iconGravity="top|start" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fondo_para_la_aplicacion_string" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/con_este_fondo_podras_perzonalizar_tu_app_con_un_increible_tema_crado_por_nuestros_propios_programadores_con_mucho_esfuerzo_y_dedicacion_string" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratings_and_reviews_string" />

        <LinearLayout
            android:layout_width="334dp"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3 Compras" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>